# SmallestHappyNumbers

./: CMakeLists.txt  GammaCalculator.hpp  GammaCalculatorFactory.cpp  GammaCalculatorFactory.hpp  LargeGamma.cpp  LargeGamma.hpp  LargeGammaCalculator.cpp  LargeGammaCalculator.hpp  README.md  SmallGammaCalculator.cpp  SmallGammaCalculator.hpp  main.cpp
Dataset/: LargeGamma.csv  SmallGamma.csv
UnitTests/: LargeGammaTest.hpp  SmallGammaTest.hpp  Test.hpp  TestContainer.hpp
Utils/: Number.cpp  Number.hpp  ProgressBar.cpp  ProgressBar.hpp  Style.hpp
